[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://DefaultChimera.tscn" type="PackedScene" id=3]
[ext_resource path="res://SelectionRect.gd" type="Script" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Enemy" type="Node2D" parent="."]

[node name="Chimera" parent="Enemy" instance=ExtResource( 3 )]
position = Vector2( 171.633, 303.007 )
leg_type = 0

[node name="Sprites" parent="Enemy/Chimera" index="2"]
scale = Vector2( -1, 1 )

[node name="Body" parent="Enemy/Chimera/Sprites" index="0"]
position = Vector2( 1.00113, -0.667419 )

[node name="PlayerMaster" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Chimera" parent="PlayerMaster" instance=ExtResource( 3 )]
position = Vector2( 781.884, 300.888 )
body_type = 1
head_type = 0

[node name="Menu" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Label" parent="Menu/Panel/GridContainer"]
margin_top = -1.0
margin_right = 120.0
margin_bottom = 59.0
rect_min_size = Vector2( 120, 60 )
text = "Attack"
align = 1
valign = 1

[node name="Item" type="Label" parent="Menu/Panel/GridContainer"]
margin_left = 124.0
margin_top = -1.0
margin_right = 244.0
margin_bottom = 59.0
rect_min_size = Vector2( 120, 60 )
text = "Item"
align = 1
valign = 1

[node name="Switch" type="Label" parent="Menu/Panel/GridContainer"]
margin_top = 63.0
margin_right = 120.0
margin_bottom = 123.0
rect_min_size = Vector2( 120, 60 )
text = "Switch"
align = 1
valign = 1

[node name="Run" type="Label" parent="Menu/Panel/GridContainer"]
margin_left = 124.0
margin_top = 63.0
margin_right = 244.0
margin_bottom = 123.0
rect_min_size = Vector2( 120, 60 )
text = "Run"
align = 1
valign = 1

[node name="SelectionRect" type="ColorRect" parent="Menu/Panel"]
modulate = Color( 1, 1, 1, 0.12549 )
margin_right = 120.0
margin_bottom = 60.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="enemy_turn_start" from="." to="Menu" method="_on_Game_enemy_turn_start"]
[connection signal="player_turn_start" from="." to="Menu" method="_on_Game_player_turn_start"]
[connection signal="attack_selected" from="Menu" to="." method="player_attack"]

[editable path="Enemy/Chimera"]
